--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -16,8 +16,8 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Debug Manager]
-Pos=1262,237
-Size=409,323
+Pos=1338,265
+Size=409,313
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -78,6 +78,11 @@ Collapsed=0
 [Window][Example: Documents]
 Pos=172,241
 Size=609,944
+Collapsed=0
+
+[Window][Debug]
+Pos=108,219
+Size=417,287
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
